src/objects/Blacklisted__c.object
<CustomObject>
    <fields>
        <fullName>Candidate__c</fullName>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Blacklisted</relationshipLabel>
        <relationshipName>Blacklisted</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Blacklisted</relationshipLabel>
        <relationshipName>Blacklisted</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_For_Blacklist__c</fullName>
        <label>Reason For Blacklist</label>
        <type>TextArea</type>
    </fields>
    <label>Blacklisted</label>
    <nameField>
        <displayFormat>BL-{0000}-{0000}</displayFormat>
        <label>Blacklisted Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blacklisted</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>